--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -3,7 +3,7 @@
         "name": "x86-uwp-Debug",
         "generator": "Visual Studio 15 2017",
         "configurationType" : "Debug",
-        "buildRoot":  "${env.LOCALAPPDATA}\\CMakeBuild\\${workspaceHash}\\build\\${name}",
+        "buildRoot":  "${projectDir}\\build\\${name}",
         "cmakeCommandArgs": "",
         "buildCommandArgs": "-m -v:minimal",
         "variables": [
